2nd commit for turn in

--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -1,13 +1,1 @@
-<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hello World</title>
-</head>
-<body>
-<h1> Joe McNally's Web Page
-</h1>
-<br/>
-<a href="test.html">Hello Servlet</a>
-</body>
-</html>
+<h1> Hi! Test File</h1>
